tests/snapshots/examples_fixtures/type_system__failing__14_unhandled_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/14_unhandled_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/type_system/failing/14_unhandled_effect.flx:39:1
   |
39 | perform Console.print("hello")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/type_system/failing/14_unhandled_effect.flx:39:1
   |
39 | perform Console.print("hello")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
